--- a/src/assets/scss/_article.scss
+++ b/src/assets/scss/_article.scss
@@ -4,6 +4,9 @@
     width: 100%;
     object-fit: cover;
     object-position:center;
+    @media (max-width: 768px) {
+      height: 200px;
+    }
   }
   p {
     line-height: 1.5;
