--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -12,7 +12,7 @@
     height:24px;
   }
   .img-line {
-    background-image: url("./images/Vector.png");
+    background-image: url("../images/Vector.png");
     height: 22px;
     width: 24px;
     background-size: cover;
